--- a/src/templates/home.jinja
+++ b/src/templates/home.jinja
@@ -1,5 +1,5 @@
-{% extends "__base.jinja" %}
-{% from "__macros.jinja" import navbarNav %}
+{% extends "__base__.jinja" %}
+{% from "__macros__.jinja" import navbarNav %}
 
 {% block title %}
   Home
