--- a/src/templates/__base__.jinja
+++ b/src/templates/__base__.jinja
@@ -1,4 +1,4 @@
-{% from "__macros.jinja" import submit_button %}
+{% from "__macros__.jinja" import submit %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -29,7 +29,7 @@
         max-width: 1000px;
       }
       .accordion-button::after {
-        background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000000'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z' /></svg>") !important;
+        background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23FFFFFF'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z' /></svg>") !important;
       }
     </style>
   </head>
@@ -41,7 +41,7 @@
         {% block navbarNav required %}
         {% endblock navbarNav %}
         <form id="navbar-form" class="d-flex">
-          {{ submit_button('Clear Session', 'clear-session', 'btn-outline-danger') }}
+          {{ submit('Clear Session', 'clear-session', 'btn-outline-danger') }}
         </form>
       </div>
     </nav>
