fix: Conserta load list

--- a/src/templates/config.jinja
+++ b/src/templates/config.jinja
@@ -228,7 +228,7 @@
                     <input id="load-{{ i }}"
                            type="number"
                            class="form-control form-control-sm text-bg-light"
-                           name="load-{{ i }}"
+                           name="load-list"
                            value="{{ loads[i] }}">
                   </div>
                 </li>
